	PR libgomp/51376 	* task.c (GOMP_taskwait): Don't access task->children outside of 	task_lock mutex region. 	(GOMP_task): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182151 138bc75d-0d04-0410-961f-82ee72b054a4